--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "framer-motion": "^12.23.12",
+        "lucide-react": "^0.536.0",
         "react-icons": "^5.5.0"
     }
 }
